--- a/modifylist/templates/dashboard.html
+++ b/modifylist/templates/dashboard.html
@@ -1,1 +1,19 @@
-<h1>{{ pagetitle }}</h1>
+{% extends "base.html" %}
+{% block content %}
+<div class="container">
+  <h1>Dashboard</h1>
+  <div class='list-container'>
+    <h2>My books</h2>
+    <div class='book-list'>
+        test
+    </div>
+  </div>
+  <div class='add-container'>
+    <h2>Add a new book</h2>
+    <div class='add-list'>
+      <input placeholder="Search for a title" />
+      <button onClick="click()">Submit</button>
+    </div>
+  </div>
+</div>
+{% endblock content %}
