--- a/modifylist/templates/base.html
+++ b/modifylist/templates/base.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %}Bookworm{% endblock title %}</title>
+    <title>Bookworm</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Latest compiled and minified Bootstrap 4 beta CSS -->
@@ -12,10 +12,11 @@
   <body>
     <nav class="navbar navbar-expand-md">
         <a class="navbar-brand" href="/">Bookworm</a>
+        <!-- render if logged in-->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="btn btn-primary btn-lg" href="{% url "login" %}">Login</a>
+                    <a class="btn btn-primary btn-lg" href="{% url "login" %}">Logout</a>
                 </li>
             </ul>
         </div>
