--- a/modifylist/templates/base.html
+++ b/modifylist/templates/base.html
@@ -12,14 +12,18 @@
   <body>
     <nav class="navbar navbar-expand-md">
         <a class="navbar-brand" href="/">Bookworm</a>
-        <!-- render if logged in-->
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="btn btn-primary btn-lg" href="{% url "login" %}">Logout</a>
+                    <a class="btn btn-primary btn-lg" href="{% url "logout" %}">Logout</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-primary btn-lg" href="{% url "dashboard" %}">{{ user }}</a>
                 </li>
             </ul>
         </div>
+        
         </nav>
     {% block content %}
     {% endblock content %}
