--- a/modifylist/templates/homepage.html
+++ b/modifylist/templates/homepage.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %}
+{% extends "base-landing.html" %}
 {% block content %}
-<div class="container">
-  <h1>Bookworm</h1>
-  <p>Your reading list digitized</p>
-  <button><a href="{% url "signup" %}">Signup</a></button>
-  <button><a href="{% url "login" %}">Login</a></button>
+<div class="Container">
+  <h1 class="Title">Booklove</h1>
+  <p class="Subtitle">Your reading list digitized. <span class="Heart">&hearts;</span></p>
+  <button class="Button"><a href="{% url "signup" %}">Signup</a></button>
+  <button class="Button"><a href="{% url "login" %}">Login</a></button>
 </div>
 {% endblock content %}
