--- a/modifylist/static/styles-landing.css
+++ b/modifylist/static/styles-landing.css
@@ -1,6 +1,6 @@
 :root {
   --background1: #92DCE5;
-  --background-and-highlight-text: #EEE5E9;
+  --background-and-highlight-text: #FFFFFF;
   --text-only: #5B5B5B;
   --accent: #D64933;
 }
