--- a/modifylist/templates/dashboard.html
+++ b/modifylist/templates/dashboard.html
@@ -1,26 +1,26 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
-  <h1>Dashboard</h1>
-  <div class='list-container'>
-    <h2>My books</h2>
-    <div class='book-list'>
+<div class="Container">
+  <h2 class="PageHeader">Dashboard</h2>
+  <div class='ListContainer'>
+    <h3 class="SectionHeader">My books:</h3>
+    <div class='BookList'>
         {% for book in books %}
-        <div>
+        <div class="Book">
           {{ book.title }}
         </div>
         {% endfor %}
     </div>
   </div>
-  <div class='add-container'>
-    <h2>Add a new book</h2>
-    <div class='add-list'>
-      <form action="." method="POST">
+  <div class='AddContainer'>
+    <div class='FormContainer'>
+      <h3 class="SectionHeader">Add a new book:</h3>
+      <form class="Form" action="." method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <button onClick="click()">Submit</button>
+        <button class="Button btn" onClick="click()">Submit</button>
       </form>
-      <div class="search-results">
+      <div class="SearchResults">
       </div>
     </div>
   </div>
