--- a/modifylist/templates/login.html
+++ b/modifylist/templates/login.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
-  <h1>Log In</h1>
-  <form class="" action="." method="POST">
+  <h2 class="PageHeader">Log In</h2>
+  <form class="Form" action="." method="POST">
     <div>
       {% csrf_token %}
       {{ form.as_p }}
-      <button class="btn btn-success btn-large">Log In</button>
-      <p>Don't have an account yet? <a href="{% url "signup" %}">Sign up today!</a></p>
+      <button class="Button btn">Log In</button>
+      <p class="SignupLink">Don't have an account yet? <a href="{% url "signup" %}">Sign up today!</a></p>
     </div>
   </form>
 </div>
