--- a/modifylist/static/styles.css
+++ b/modifylist/static/styles.css
@@ -50,7 +50,8 @@ body {
   text-align: center;
   grid-row: 2;
   grid-column: 2;
-  color: var(--text-only)
+  color: var(--text-only);
+  padding-top: 10px;
 }
 .Form {
   text-align: center;
@@ -60,8 +61,9 @@ body {
 }
 label {
   font-family: 'Bitter', serif;
+  display: block;
 }
 /*Login*/
-.SignupLink {
+.SignupLink, .LoginLink {
   font-family: 'Bitter', serif;
 }
