--- a/modifylist/templates/base-dashboard.html
+++ b/modifylist/templates/base-dashboard.html
@@ -5,32 +5,35 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>BookStore</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="../static/favicon.ico">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/litera/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon.ico' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/4.4.0/font/octicons.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../static/styles.css" />
-    <link rel="stylesheet" type="text/css" href="../static/styles_dashboard.css" />
+    <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'styles_dashboard.css' %}" />
   </head>
   <body>
     <nav class="Navbar navbar navbar-expand-md">
-        <a class="NavbarBrand navbar-brand" href="/">BookStore</a>
-        {% if user.is_authenticated %}
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="NavbarList navbar-nav mr-auto">
-                <li class="NavItem nav-item">
-                    <a class="NavButton btn" href="{% url "logout" %}">Logout</a>
-                </li>
-                <li class="NavItem nav-item">
-                    <a class="NavButton btn" href="{% url "dashboard" username=user.username %}">Dashboard</a>
-                </li>
-                <li class="NavPara nav-item">
-                    <a class="NavButton btn">{{ user }}</a>
-                </li>
-            </ul>
+      <a class="NavbarBrand navbar-brand" href="/">BookStore</a>
+        <div class="NavbarDropdown">
+          {% if user.is_authenticated %}
+            <div class="dropdown">
+              <span>Logged in as: </span>
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                {{ user }}
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="{% url "logout" %}">Account Settings</a>
+                <a class="dropdown-item" href="{% url "logout" %}">Logout</a>
+              </div>
+            </div>
+          {% endif %}
         </div>
-        {% endif %}
-        </nav>
+    </nav>
     {% block content %}
     {% endblock content %}
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>  </body>
   </body>
