--- a/modifylist/templates/base.html
+++ b/modifylist/templates/base.html
@@ -13,23 +13,22 @@
   </head>
   <body>
     <nav class="Navbar navbar navbar-expand-md">
-        <a class="NavbarBrand navbar-brand" href="/">BookStore</a>
-        {% if user.is_authenticated %}
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="NavbarList navbar-nav mr-auto">
-                <li class="NavItem nav-item">
-                    <a class="NavButton btn" href="{% url "logout" %}">Logout</a>
-                </li>
-                <li class="NavItem nav-item">
-                    <a class="NavButton btn" href="{% url "dashboard" username=user.username%}">Dashboard</a>
-                </li>
-                <li class="NavPara nav-item">
-                    <a class="NavButton btn">{{ user }}</a>
-                </li>
-            </ul>
+      <a class="NavbarBrand navbar-brand" href="/">BookStore</a>
+        <div class="NavbarDropdown">
+          {% if user.is_authenticated %}
+            <div class="dropdown">
+              <span>Logged in as: </span>
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                {{ user }}
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="{% url "logout" %}">Account Settings</a>
+                <a class="dropdown-item" href="{% url "logout" %}">Logout</a>
+              </div>
+            </div>
+          {% endif %}
         </div>
-        {% endif %}
-        </nav>
+    </nav>
     {% block content %}
     {% endblock content %}
   </body>
