--- a/modifylist/static/styles_dashboard.css
+++ b/modifylist/static/styles_dashboard.css
@@ -46,6 +46,9 @@ body {
   color: var(--background-and-highlight-text);
   padding: none;
 }
+.DeleteLink {
+  color: var(--background-and-highlight-text);
+}
 .Form {
   text-align: left;
 }
