--- a/modifylist/templates/login.html
+++ b/modifylist/templates/login.html
@@ -8,7 +8,7 @@
       {% csrf_token %}
       {{ form.as_p }}
       <button class="Button btn"><span class=ButtonText>Log In</span></button>
-      <p class="SignupLink">Don't have an account yet? <a href="{% url "signup" %}">Sign up today!</a></p>
+      <p class="SignupLink">Don't have an account yet? <a href="{% url 'signup' %}">Sign up today!</a></p>
     </div>
   </form>
 </div>
