adding button for modifying book title, status

--- a/modifylist/templates/dashboard.html
+++ b/modifylist/templates/dashboard.html
@@ -15,6 +15,7 @@
             <div class="BookInfo"><span class="TitleText">{{ book.status }}</div>
             <div class="BookButtons">
               <button class="Button DeleteButton"><a class="DeleteLink" href="/delete_book/{{ book.id }}">x</a></button>
+              <button class="Button EditButton"><a class="EditLink" href="/edit_book/{{ book.id }}">test</a></button>
             </div>
           </div>
           {% endif %}
