--- a/modifylist/templates/homepage.html
+++ b/modifylist/templates/homepage.html
@@ -8,7 +8,7 @@
   </div>
   <div class="ButtonContainer">
     {% if user.is_authenticated %}
-    <h2>Welcome back, {{ user.username }}</h2>
+    <h2>Welcome, {{ user.username }}</h2>
     <button class="Button"><a class="ButtonText" href="{% url 'dashboard' username=user.username %}">Dashboard</a></button>
     {% else %}
     <button class="Button"><a class="ButtonText" href="{% url "signup" %}">Signup</a></button>
